--- a/views/list.pug
+++ b/views/list.pug
@@ -3,7 +3,7 @@ html(lang='en')
   head
     title = title
   body
-    h2#author(title='Goss') Safiullina Arina
+    h2#author(title='Goss') Robert Zainitdinov
     #container
       p List of logins:
       ol
